flickering background and keyboard overflow fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,8 +26,6 @@ section{
     #2b2b2b,
     #000,
   );
-  background-size: 200%;
-  animation: backgroundAnimation 10s ease-in-out infinite alternate-reverse;
 
 }
 
@@ -117,8 +115,6 @@ section{
 }
 
 form {
-
-
   .customInput {
     background-color: #000;
     position: relative;
